Networkable/force-app/main/default/objects/Account/fields/Average_Won_Value_in_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Average_Won_Value_in_Hierarchy__c</fullName>
    <label>Average Won Value in Hierarchy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>