Networkable/force-app/main/default/objects/Account/fields/Conversion__c.field-meta.xml
<CustomField>
    <fullName>Conversion__c</fullName>
    <label>Conversion %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>