Networkable/force-app/main/default/objects/Account/fields/Conversion_in_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Conversion_in_Hierarchy__c</fullName>
    <label>Conversion % in Hierarchy</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>