Networkable/force-app/main/default/objects/Account/fields/Open__c.field-meta.xml
<CustomField>
    <fullName>Open__c</fullName>
    <label>Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>