Networkable/force-app/main/default/objects/Account/fields/Open_Value_in_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Open_Value_in_Hierarchy__c</fullName>
    <label>Open Value in Hierarchy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>