Networkable/force-app/main/default/objects/Account/fields/Relationship_Value__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Value__c</fullName>
    <label>Relationship Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>