Networkable/force-app/main/default/objects/Account/fields/Relationships_in_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Relationships_in_Hierarchy__c</fullName>
    <label>Relationships in Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>