Networkable/force-app/main/default/objects/Account/fields/Won__c.field-meta.xml
<CustomField>
    <fullName>Won__c</fullName>
    <label>Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>