Networkable/force-app/main/default/objects/Account/fields/Won_in_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Won_in_Hierarchy__c</fullName>
    <label>Won in Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>